GNOME Bugzilla – Bug 722699
mpegtsmux: don't leak pad name when treating events
Last modified: 2014-01-22 09:12:25 UTC
fixed gst_pad_get_name leakages.
Created attachment 266877 [details] [review] mpegtsmux: don't leak pad name when treating events
Review of attachment 266877 [details] [review]: ::: gst/mpegtsmux/mpegtsmux.c @@ +815,2 @@ GST_INFO_OBJECT (mux, "have downstream force-key-unit event on pad %s, " "seqnum %d, running-time %" GST_TIME_FORMAT " count %d", Just use GST_INFO_OBJECT (pad, ...)
Created attachment 266883 [details] [review] GST_INFO_OBJECT (pad,... Good Review, Thanks.
commit 99c2aa14c363c087ca690a698c40e11fb84ca118 Author: Justin Joy <justin.joy.9to5@gmail.com> Date: Tue Jan 21 23:42:58 2014 +0900 mpegtsmux: don't leak pad name when treating events https://bugzilla.gnome.org/show_bug.cgi?id=722699