mpegtsmux: don't leak pad name when treating events

https://bugzilla.gnome.org/show_bug.cgi?id=722699